# treezip

./: AUTHORS  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  config.h  config.h.in  config.status  configure  configure.ac
Common/: SCTree.cc  SCTree.h  buildtree.cc  buildtree.h  global.cc  global.h  hash.cc  hash.hh  hashfunc.cc  hashfunc.hh  label-map.cc  label-map.cc~  label-map.hh~  newick.c  newick.h  parsing.cc  parsing.cc~  parsing.h
TreeZip/: Makefile  Makefile.am  Makefile.in  bmerge.cc  bmerge.h  compressfunc.cc  compressfunc.h  nexus_compress.cc  nexus_compress_ncl.cc  nexus_compress_ncl.hh  nexus_decompress.cc  nexus_decompress_ncl.cc  nexus_decompress_ncl.hh  nexus_setop.cc  nexus_setop.hh  normalizer.cpp  normalizer.h  tmerge.cc  tmerge.h  treezip.cc
TreeZip/.deps/: Random.Po  SCNode.Po  SCTree.Po  bmerge.Po  buildtree.Po  compressfunc.Po  global.Po  hash.Po  hashfunc.Po  label-map.Po  newick.Po  nexus_compress.Po  nexus_decompress.Po  nexus_setop.Po  parsing.Po  tmerge.Po  treezip.Po
autom4te.cache/: output.1  requests  traces.0  traces.1
samples/: 33-1000.tre  Ana-1000.tre  file1.tre  file1.tre.e  file1.tre.trz  file2.tre  hetero.tre  sample1.tre  sample2.tre  sample3.tre
tclap/: UnlabeledValueArg.h  ValueArg.h
