# 
# Normally none of the SUBDIRS lines below should be commented out. 
# Please make sure it's checked into git this way so you don't annoy the next person!
#

#
# To build a distribution (make dist) for only a subset of the directories:
# a). Comment out the SUBDIRS lines for directories that will NOT be built
# c). Perform similar activities in configure.ac
# d). Run autoreconf in the source directory
# e). make dist from the build directory (may be the same as the source directory)
#

SUBDIRS = 
SUBDIRS += TreeZip 
